# dbt-ui

./: .gitignore  CLAUDE.md  README.md  Taskfile.yml  docker-compose.yml
.claude/: settings.local.json
.claude/agents/: dbt-ui-dev.md
.claude/rules/: dbt-execution.md  doc-update.md  event-bus-and-sse.md  frontend-patterns.md  migrations.md  settings-conventions.md  testing-conventions.md
.claude/skills/: new-endpoint.md  (+2 more)
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  logging_setup.py  main.py
backend/app/api/: debug.py  docs.py  drift.py  env.py  events.py  files.py  freshness.py  git.py  global_profiles.py  init.py  logs.py  models.py  projects.py  runs.py  settings.py  sql.py  terminal.py  workspace.py
backend/app/db/: engine.py  migrations.py  models.py
backend/app/dbt/: column_lineage.py  debug_parser.py  drift.py  freshness_parser.py  init_scripts.py  interactive.py  manifest.py  profile.py  run_results.py  runner.py  select.py  show_parser.py  venv.py
backend/app/events/: bus.py  sse.py
backend/app/git/: repo.py  runner.py
backend/app/logs/: api_logger.py  project_logger.py
backend/app/projects/: discovery.py  service.py
backend/app/watcher/: service.py
backend/tests/: conftest.py  test_api_git.py  test_api_health.py  test_api_models.py  test_api_projects.py  test_column_lineage.py  test_discovery.py  test_git_repo.py  test_init_scripts.py  test_manifest.py  test_run_results.py  test_select.py
docs/: architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
(+77 files in other folders)
